deploy/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: repo
spec:
  selector:
    app: repo
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: web
