deploy/manifests/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: repo
spec:
  host: MATCH_YOUR_REPO_DEST
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: repo
    weight: 100
